# sg-engine

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  b  build.rs  clean  profile  rebuild-mods  run  todo.markdown
assets/: container.3ds  ship.3ds
assets/models/: blobby.mtl  cube.mtl  gurp.blend  gurp.ogex  helper-cube.blend  helper-cube.blend1  helper-cube.blend11  helper-cube.mtl  plane.mtl  pship.mtl  textured_thing.mtl
assets/shaders/: fs.glsl  triangle_fs.glsl  triangle_geo.glsl  triangle_vs.glsl  vs.glsl
examples/: client.rs  thread_play.rs
game_state/: Cargo.toml  README.md  build.rs
game_state/benches/: node.rs
game_state/examples/: nodes.rs
game_state/src/: event.rs  lib.rs  model.rs  scene.rs  state.rs  tree.rs
game_state/src/event/: mod.rs
game_state/src/input/: events.rs  mod.rs  screen.rs
game_state/src/state/: access.rs  asset_state.rs  entity_state.rs  input_state.rs  mod.rs  render_state.rs  simulation_state.rs  ui_state.rs
game_state/src/thing/: mod.rs
game_state/src/ui/: events.rs  mod.rs  view.rs
game_state/src/utils/: fps.rs  mod.rs
game_state/tests/: node.rs
mod_asset_loader/: Cargo.toml  README.md
mod_asset_loader/src/: lib.rs
mod_dummy/: Cargo.toml  README.md  build.rs
mod_dummy/src/: lib.rs
mod_gamepad/: Cargo.toml  README.md
mod_gamepad/src/: lib.rs
mod_input/: Cargo.toml  README.md
mod_input/src/: lib.rs
mod_rendering/: Cargo.toml  README.md  build.rs
mod_rendering/src/: lib.rs
mod_rendering/src/renderer/: mod.rs
mod_rendering/src/renderer/opengl/: mod.rs
mod_rendering/src/renderer/utils/: fps.rs
mod_rendering/src/renderer/vulkan/: mod.rs
mod_rendering_opengl/: Cargo.toml  README.md
mod_rendering_opengl/src/: lib.rs
mod_rendering_opengl/src/renderer/opengl/: mod.rs
mod_rendering_vulkan/: Cargo.toml
mod_rendering_vulkan/src/: lib.rs
mod_rendering_vulkan/src/renderer/vulkano/: mod.rs  vulkano_win_patch.rs
mod_rendering_vulkano/: Cargo.toml  build.rs
mod_rendering_vulkano/src/: lib.rs
mod_rendering_vulkano/src/renderer/: mod.rs
mod_rendering_vulkano/src/renderer/vulkano/: input.rs  mod.rs  vertex.rs  vulkano_sdl2.rs  vulkano_win_patch.rs
mod_simulation/: Cargo.toml  README.md  build.rs
mod_simulation/src/: lib.rs
nom-obj/: Cargo.toml  README.md
nom-obj/assets/: cube.mtl  four_blue_cubes.mtl  transparent_blue_cube.mtl
nom-obj/examples/: obj-parser.rs
nom-obj/src/: lib.rs  mtl.rs  obj.rs  validator.rs
nom-obj/src/model/: mod.rs
nom-obj/src/parser/: common.rs  mod.rs  mtl.rs  obj.rs
simulation/: Cargo.toml
simulation/src/: lib.rs
simulation2/: Cargo.toml
simulation2/src/: lib.rs
src/: lib.rs  macros.rs  main.rs
src/aow-rust/: ai.rs  game.rs  lib.rs  main.rs  mission.rs  model.rs  options.rs  renderer.rs  shaders.rs  ship.rs  textures.rs  types.rs  ui.rs
src/event/: mod.rs
src/game/: mod.rs  primitives.rs
src/input/: events.rs  screen.rs
src/libloader/: mod.rs
src/net/: mod.rs  socket.rs  transport.rs
src/physics/: mod.rs  world.rs
src/protocol/: mod.rs  protocol.rs
src/renderer/: mod.rs  renderer.rs  vertex.rs
src/renderer/opengl/: mod.rs
src/renderer/software/: mod.rs
src/renderer/utils/: fps.rs  mod.rs
src/renderer/vulkan/: mod.rs  vertex.rs
src/ui/: view.rs
subproject/: Cargo.toml  README.md  build.rs
subproject/src/: lib.rs  state.rs
