[package]
name = "sg_engine"
version = "0.2.0"
authors = ["Daniel Werner <dan.werner@gmail.com>"]
publish = false
build = "build.rs"

[lib]
name = "engine"
crate-type = ["rlib"]

[[bin]]
name = "something_good"

[dependencies]
# LibLoader
libloading = "0.3" # 0.5
ansi_term = "0.9" # 0.11
time = "0.1"

[dependencies.game_state]
path = "game_state"

# mods don't need to be deps, but can be
# to get cargo to build them when the main project is built
# this builds them and puts them in the target for the main output
# mod_rendering = { path = "mod_rendering" }
# mod_asset_loader = { path = "mod_asset_loader" }
# mod_simulation = { path = "mod_simulation" }

