[package]
name = "sg_engine"
version = "0.2.0"
authors = ["Daniel Werner <dan.werner@gmail.com>"]
publish = false
build = "build.rs"
edition = "2018"

[lib]
name = "engine"
crate-type = ["rlib"]

[dependencies]
# LibLoader
libloading = "0.5"
ansi_term = "0.12"

[dependencies.game_state]
path = "game_state"

# TODO: explore this again, look at release strategies:
# mods don't need to be deps, but can be
# to get cargo to build them when the main project is built
# this builds them and puts them in the target for the main output
# mod_rendering = { path = "mod_rendering" }
# mod_asset_loader = { path = "mod_asset_loader" }
# mod_simulation = { path = "mod_simulation" }

