[package]
name = "game_state"
version = "0.1.0"
authors = ["Daniel Werner <dan.werner@gmail.com>"]
edition = "2018"

[features]
default = []
dynamic_lib = []

[lib]
name = "game_state"
crate-type=["rlib"]

[dependencies]

# needs to match all other modules
winit = "0.20.0-alpha1"
cgmath = "0.16"
image = "0.17"
time = "0.1"

nom-obj = "0.1"

