[package]
name = "game_state"
version = "0.1.0"
authors = ["Daniel Werner <dan.werner@gmail.com>"]
edition = "2018"

[features]
default = []
dynamic_lib = []

[lib]
name = "game_state"
crate-type=["rlib"]

[dependencies]

# needs to match all other modules
winit = "0.20.0-alpha3"
nalgebra = "0.18"
image = "0.17"
nom-obj = "0.1"
serde = "1"

# TODO: update to stable once async/await lands
futures-preview="0.3.0-alpha.18"
