[package]
name = "mod_asset_loader"
version = "0.1.0"
authors = ["Daniel Werner <dan.werner@gmail.com>"]

[features]
default = []
dynamic_lib = []

[lib]
name = "mod_asset_loader"
crate-type=["dylib"]

[dependencies]
cgmath = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "0.8"

[dependencies.game_state]
path = "../game_state"
