[package]
publish = false
edition = "2018"
name = "mod_asset_loader"
version = "0.1.0"
authors = ["Daniel Werner <dan.werner@gmail.com>"]

[features]
default = []
dynamic_lib = []

[lib]
name = "mod_asset_loader"
crate-type=["dylib"]

[dependencies]
cgmath = "0.16"

[dependencies.game_state]
path = "../game_state"
