[package]
publish = false
name = "mod_asset_loader"
version = "0.1.0"
authors = ["Daniel Werner <dan.werner@gmail.com>"]
edition = "2018"

[features]
default = []
dynamic_lib = []

[lib]
name = "mod_asset_loader"
crate-type=["dylib"]

[dependencies]

[dependencies.game_state]
path = "../game_state"
