[package]
name = "mod_rendering_opengl"
version = "0.1.0"
authors = ["Daniel Werner <dan.werner@gmail.com>"]

[features]
default = []
dynamic_lib = []

[lib]
name = "mod_rendering_opengl"
crate-type=["dylib"]

[dependencies]
glium = "0.16" # 0.21
image = "0.13" #0.18
cgmath = "0.12" #0.16

[dependencies.game_state]
path = "../game_state"

[build-dependencies]
