[package]
name = "mod_rendering_opengl"
version = "0.1.0"
authors = ["Daniel Werner <dan.werner@gmail.com>"]

[features]
default = []
dynamic_lib = []

[lib]
name = "mod_rendering_opengl"
crate-type=["dylib"]

[dependencies]
glutin = "0.17"
gl = "0.10"
cgmath = "0.16"
image = "0.17" #0.18 seems to fail to compile now...

[dependencies.game_state]
path = "../game_state"

[build-dependencies]
