[package]
name = "mod_rendering_vulkan"
version = "0.1.0"
authors = ["Daniel Werner <dan.werner@gmail.com>"]

[features]
default = []
dynamic_lib = []

[lib]
name = "mod_rendering_vulkan"
crate-type=["dylib"]

[dependencies]
# Vulkano Renderer
vulkano-win = "0.9"
vulkano = "0.9"
vulkano-shaders = "0.9"
glsl-to-spirv = "0.1"

cgmath = "0.16"
image = "0.17"

[dependencies.game_state]
path = "../game_state"

[build-dependencies]
vulkano-shaders = "0.9"
