[package]
publish = false
name = "mod_rendering_vulkano"
version = "0.1.0"
authors = ["Daniel Werner <dan.werner@gmail.com>"]

# TODO: switch to shaderc
#edition = "2018"

[features]
default = []
dynamic_lib = []

[lib]
name = "mod_rendering_vulkano"
crate-type=["dylib"]

[dependencies]
vulkano = "0.14"
vulkano-shaders = "0.14"
image = "0.17"

[dependencies.game_state]
path = "../game_state"
