[package]
publish = false
name = "mod_rendering_vulkano"
version = "0.1.0"
authors = ["Daniel Werner <dan.werner@gmail.com>"]
edition = "2018"

[features]
default = []

# TODO: support static compilation and linking for final build.
dynamic_lib = []

[lib]
name = "mod_rendering_vulkano"
crate-type=["dylib"]

[dependencies]
eyre = "0.6.5"
image = "0.23"
thiserror = "1.0"
vulkano = "0.23"
vulkano-shaders = "0.23"

[dependencies.game_state]
path = "../game_state"
